2020-04-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-image.el (mime-image-create): Check native image scaling
	more strictly.  Fix typo.

2019-07-07  Tatsuya Kinoshita  <tats@debian.org>

	* mime-view.el (mime-display-multipart/multilingual-prefered-languages):
	Check for `get-language-info' existence.

2019-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-image.el (mime-image-create): Update native image scaling
	checker.

2019-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Support previewing unencrypted pkcs7-mime part.

	* mime-pgp.el (mime-pgp-maybe-remove-cr): New funcion.
	(mime-pgp-decrypt-string): Use it.
	(mime-pgp-entity-string): New function.
	(mime-verify-application/*-signature-internal): Use it.
	(mime-pgp-verify-result-to-string)
	(mime-pgp-pkcs7-decrypt-enveloped-data)
	(mime-pgp-pkcs7-verify-signed-data)
	(mime-pgp-smime-type-from-situation)
	(mime-pgp-register-decrypted-buffer): New functions.
	(mime-preview-application/pgp-encrypted): Refactored.
	(mime-view-application/pkcs7-mime)
	(mime-preview-application/pkcs7-mime): Support unencrypted part.

2019-05-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-encrypt-to-self): Change default
	value to t.

2019-05-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-multipart/related-show-all-children)
	(mime-view-multipart/alternative-show-all-children): Change
	default value to t.

2019-05-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-image.el (mime-image-normalize-xbm-buffer)
	(mime-image-read-xbm-buffer): Do not receive arguemnt nor change
	current buffer.  All callers call it with current buffer.
	(mime-image-create): Caller adjusted.

2019-05-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	New customizable variable mime-image-normalize-xbm is introduced.
	When it is nil, xbm image is not normalized but scalable.

	* mime-image.el (mime-image-normalize-xbm): New customizable
	variable.
	(mime-image-max-height, mime-image-max-width): Update docstring to